--- a/estudante-api/src/main/resources/application.properties
+++ b/estudante-api/src/main/resources/application.properties
@@ -1,13 +1,15 @@
 spring.h2.console.enabled=true
-
+spring.h2.console.path=/h2-console
 spring.application.name=estudante-api
-spring.datsource.url=jdbc:h2:mem:estudante
-spring.datsource.driverClassName=org.h2.Driver
-spring.datsource.username=sa
-spring.datsource.password=
+spring.datasource.url=jdbc:h2:mem:estudante
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
 
-spring.jpa.show-sql-true
+spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
 
---
+# habilita o H2 para criar automaticamente o banco
+spring.datasource.initialization-mode=always
+
