--- a/estudante-api/src/main/resources/application.properties
+++ b/estudante-api/src/main/resources/application.properties
@@ -1,3 +1,8 @@
+server.error.include-message=always
+server.error.include-binding-errors=always
+server.error.include-stacktrace=always
+server.error.include-exception=true
+
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
